--- a/docs/examples/config/model_config.neuro.json
+++ b/docs/examples/config/model_config.neuro.json
@@ -44,8 +44,8 @@
           {"name": "key", "type": "tensor"}
         ],
         "attributes": {
-          "num_heads": {"ref": "constants/attention_heads"},
-          "embed_dim": {"ref": "constants/fusion_dimension"}
+          "num_heads": "@{constants/attention_heads}",
+          "embed_dim": "@{constants/fusion_dimension}"
         }
       },
       "implementation": {
@@ -56,8 +56,8 @@
               "type": "multi_head_attention",
               "arguments": ["@{inputs.query}", "@{inputs.key}"],
               "attributes": {
-                "heads": {"ref": "constants/num_heads"},
-                "dim": {"ref": "constants/embed_dim"}
+                "heads": "@{constants/num_heads}",
+                "dim": "@{constants/embed_dim}"
               }
             }
           ]
