--- a/tools/package.json
+++ b/tools/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "json-source-map": "^0.6.1"
   },
   "bin": {
     "validate-json-schema": "./validate-json-schema.js"
